--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
           <h2 class="visually-hidden">Futures</h2>
           <ul class="list section-two">
             <li class="link">
+              <svg>
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
               <h3 class="three-title section-two-element">
                 <a href="#strategy"></a>Strategy
               </h3>
@@ -82,6 +85,9 @@
               </p>
             </li>
             <li class="link">
+              <svg>
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
               <h3 class="three-title section-two-element">
                 <a href="#punctuality"></a>Punctuality
               </h3>
@@ -91,6 +97,9 @@
               </p>
             </li>
             <li class="link">
+              <svg>
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
               <h3 class="three-title section-two-element">
                 <a href="#diligence"></a>Diligence
               </h3>
@@ -100,6 +109,7 @@
               </p>
             </li>
             <li class="link">
+              <svg><use href="./images/icons.svg#icon-diagram-1"></use></svg>
               <h3 class="three-title section-two-element">
                 <a href="technologies"></a>Technologies
               </h3>
@@ -160,6 +170,28 @@
               <div class="container-list">
                 <h3 class="background-white three-title">Mark Guerrero</h3>
                 <p class="background-white p-body">Product Designer</p>
+                <ul class="list svg-images">
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="link team-member">
@@ -172,6 +204,28 @@
               <div class="container-list">
                 <h3 class="background-white three-title">Tom Ford</h3>
                 <p class="background-white p-body">Frontend Developer</p>
+                <ul class="list svg-images">
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="link team-member">
@@ -184,6 +238,28 @@
               <div class="container-list">
                 <h3 class="background-white three-title">Camila Garcia</h3>
                 <p class="background-white p-body">Marketing</p>
+                <ul class="list svg-images">
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="link team-member">
@@ -196,7 +272,55 @@
               <div class="container-list">
                 <h3 class="background-white three-title">Daniel Wilson</h3>
                 <p class="background-white p-body">UI Designer</p>
+                <ul class="list svg-images">
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </li>
+                  <li class="link svg-list-element">
+                    <svg>
+                      <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Section 5 -->
+      <section class="section-five">
+        <div class="container">
+          <h2 class="subtitle-web-studio-blue">Customers</h2>
+          <ul class="list svg-images">
+            <li class="link svg-elements-big">
+              <svg><use href="./images/icons.svg#icon-Logo-4"></use></svg>
+            </li>
+            <li class="link svg-elements-big">
+              <svg><use href="./images/icons.svg#icon-Logo-5"></use></svg>
+            </li>
+            <li class="link svg-elements-big">
+              <svg><use href="./images/icons.svg#icon-Logo-6"></use></svg>
+            </li>
+            <li class="link svg-elements-big">
+              <svg><use href="./images/icons.svg#icon-Logo-7"></use></svg>
+            </li>
+            <li class="link svg-elements-big">
+              <svg><use href="./images/icons.svg#icon-Client-5"></use></svg>
+            </li>
+            <li class="link svg-elements-big">
+              <svg><use href="./images/icons.svg#icon-Client-6"></use></svg>
             </li>
           </ul>
         </div>
@@ -211,6 +335,29 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <ul class="list svg-images">
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </li>
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </li>
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </li>
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </li>
+        </ul>
+
         <img
           class="section-three-image"
           src="./images/darkbg.jpg"
