--- a/portfolio.html
+++ b/portfolio.html
@@ -208,6 +208,28 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <ul class="list svg-images">
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </li>
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </li>
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </li>
+          <li class="link svg-list-element">
+            <svg>
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </li>
+        </ul>
         <img
           class="portfolio-image"
           src="./images/darkbg.jpg"
