--- a/portfolio.html
+++ b/portfolio.html
@@ -230,6 +230,31 @@
             </svg>
           </li>
         </ul>
+        <div>
+          <p class="p-footer">Social media</p>
+          <ul class="list svg-images">
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
         <img
           class="portfolio-image"
           src="./images/darkbg.jpg"
