--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
           <h2 class="visually-hidden">Futures</h2>
           <ul class="list section-two">
             <li class="link">
-              <svg>
-                <use href="./images/icons.svg#icon-antenna-1"></use>
-              </svg>
+              <div class="svg-elements-section-two">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="three-title section-two-element">
                 <a href="#strategy"></a>Strategy
               </h3>
@@ -85,9 +87,11 @@
               </p>
             </li>
             <li class="link">
-              <svg>
-                <use href="./images/icons.svg#icon-clock-1"></use>
-              </svg>
+              <div class="svg-elements-section-two">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="three-title section-two-element">
                 <a href="#punctuality"></a>Punctuality
               </h3>
@@ -97,9 +101,11 @@
               </p>
             </li>
             <li class="link">
-              <svg>
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
-              </svg>
+              <div class="svg-elements-section-two">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="three-title section-two-element">
                 <a href="#diligence"></a>Diligence
               </h3>
@@ -109,7 +115,11 @@
               </p>
             </li>
             <li class="link">
-              <svg><use href="./images/icons.svg#icon-diagram-1"></use></svg>
+              <div class="svg-elements-section-two">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="three-title section-two-element">
                 <a href="technologies"></a>Technologies
               </h3>
@@ -172,22 +182,25 @@
                 <p class="background-white p-body">Product Designer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg>
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
+                    <svg class="svg-list-element" width="16" height="16">
+                      <use
+                        href="./images/icons.svg#icon-instagram-2"
+                        class="svg-elements-list"
+                      ></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -206,22 +219,22 @@
                 <p class="background-white p-body">Frontend Developer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -240,22 +253,22 @@
                 <p class="background-white p-body">Marketing</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -274,22 +287,22 @@
                 <p class="background-white p-body">UI Designer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                   </li>
                   <li class="link svg-list-element">
-                    <svg>
+                    <svg width="16" height="16">
                       <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
                   </li>
@@ -305,22 +318,37 @@
           <h2 class="subtitle-web-studio-blue">Customers</h2>
           <ul class="list svg-images">
             <li class="link svg-elements-big">
-              <svg><use href="./images/icons.svg#icon-Logo-4"></use></svg>
+              <svg width="104" height="56">
+                <use
+                  href="./images/icons.svg#icon-Logo-4"
+                  class="svg-elements-section-five"
+                ></use>
+              </svg>
             </li>
             <li class="link svg-elements-big">
-              <svg><use href="./images/icons.svg#icon-Logo-5"></use></svg>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-5"></use>
+              </svg>
             </li>
             <li class="link svg-elements-big">
-              <svg><use href="./images/icons.svg#icon-Logo-6"></use></svg>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-6"></use>
+              </svg>
             </li>
             <li class="link svg-elements-big">
-              <svg><use href="./images/icons.svg#icon-Logo-7"></use></svg>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-Logo-7"></use>
+              </svg>
             </li>
             <li class="link svg-elements-big">
-              <svg><use href="./images/icons.svg#icon-Client-5"></use></svg>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-Client-5"></use>
+              </svg>
             </li>
             <li class="link svg-elements-big">
-              <svg><use href="./images/icons.svg#icon-Client-6"></use></svg>
+              <svg width="104" height="56">
+                <use href="./images/icons.svg#icon-Client-6"></use>
+              </svg>
             </li>
           </ul>
         </div>
@@ -335,28 +363,31 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-        <ul class="list svg-images">
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-instagram-2"></use>
-            </svg>
-          </li>
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-twitter-1"></use>
-            </svg>
-          </li>
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-facebook-1"></use>
-            </svg>
-          </li>
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-linkedin-1"></use>
-            </svg>
-          </li>
-        </ul>
+        <div>
+          <p class="p-footer">Social media</p>
+          <ul class="list svg-images">
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </li>
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </li>
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </li>
+            <li class="link svg-list-element">
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
 
         <img
           class="section-three-image"
