--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <!-- section 2 -->
 
       <section class="section-two">
-        <div class="container">
+        <div class="container div-section-two">
           <h2 class="visually-hidden">Futures</h2>
           <ul class="list section-two">
             <li class="link">
@@ -184,8 +184,8 @@
                   <li class="link svg-list-element">
                     <svg class="svg-list-element" width="16" height="16">
                       <use
-                        href="./images/icons.svg#icon-instagram-2"
                         class="svg-elements-list"
+                        href="./images/icons.svg#icon-instagram-2"
                       ></use>
                     </svg>
                   </li>
@@ -356,13 +356,15 @@
     </main>
     <footer class="footer footer-container">
       <div class="container footer-container">
-        <a class="link logo logo-blue logo-footer" href="./index.html"
-          >Web <span class="logo-header-footer">Studio</span></a
-        >
-        <p class="p-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a class="link logo logo-blue logo-footer" href="./index.html"
+            >Web <span class="logo-header-footer">Studio</span></a
+          >
+          <p class="p-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <div>
           <p class="p-footer">Social media</p>
           <ul class="list svg-images">
