--- a/portfolio.html
+++ b/portfolio.html
@@ -201,13 +201,15 @@
     </main>
     <footer class="footer footer-container">
       <div class="container footer-container">
-        <a class="link logo logo-blue" href="./portfolio.html"
-          >Web <span class="logo-header-footer logo-footer">Studio</span></a
-        >
-        <p class="p-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a class="link logo logo-blue" href="./portfolio.html"
+            >Web <span class="logo-header-footer logo-footer">Studio</span></a
+          >
+          <p class="p-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
         <ul class="list svg-images">
           <li class="link svg-list-element">
             <svg>
