--- a/index.html
+++ b/index.html
@@ -367,11 +367,16 @@
         </div>
         <div>
           <p class="p-footer">Social media</p>
-          <ul class="list svg-images">
+          <ul class="list svg-images footer-list-elements">
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
+              <a class="svg-elements-list">
+                <svg width="24" height="24">
+                  <use
+                    class="svg-elements-list"
+                    href="./images/icons.svg#icon-instagram-2"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-list-element">
               <svg width="24" height="24">
