--- a/index.html
+++ b/index.html
@@ -182,27 +182,32 @@
                 <p class="background-white p-body">Product Designer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg class="svg-list-element" width="16" height="16">
-                      <use
-                        class="svg-elements-list"
-                        href="./images/icons.svg#icon-instagram-2"
-                      ></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -219,24 +224,32 @@
                 <p class="background-white p-body">Frontend Developer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -253,24 +266,32 @@
                 <p class="background-white p-body">Marketing</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -287,24 +308,32 @@
                 <p class="background-white p-body">UI Designer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="link svg-list-element">
-                    <svg width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
+                    <a class="svg-list-element">
+                      <svg width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -318,37 +347,49 @@
           <h2 class="subtitle-web-studio-blue">Customers</h2>
           <ul class="list svg-images">
             <li class="link svg-elements-big">
-              <svg width="104" height="56">
-                <use
-                  href="./images/icons.svg#icon-Logo-4"
-                  class="svg-elements-section-five"
-                ></use>
-              </svg>
+              <a class="svg-elements-section-five">
+                <svg width="104" height="56">
+                  <use
+                    href="./images/icons.svg#icon-Logo-4"
+                    class="svg-elements-section-five"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-elements-big">
-              <svg width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-5"></use>
-              </svg>
+              <a class="svg-elements-section-five">
+                <svg width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-elements-big">
-              <svg width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-6"></use>
-              </svg>
+              <a class="svg-elements-section-five">
+                <svg width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-6"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-elements-big">
+              <a class="svg-elements-section-five"></a>
               <svg width="104" height="56">
                 <use href="./images/icons.svg#icon-Logo-7"></use>
               </svg>
+            </a>
             </li>
             <li class="link svg-elements-big">
+              <a class="svg-elements-section-five">
               <svg width="104" height="56">
                 <use href="./images/icons.svg#icon-Client-5"></use>
               </svg>
+            </a>
             </li>
             <li class="link svg-elements-big">
+              <a class="svg-elements-section-five">
               <svg width="104" height="56">
                 <use href="./images/icons.svg#icon-Client-6"></use>
               </svg>
+            </a>
             </li>
           </ul>
         </div>
@@ -369,29 +410,32 @@
           <p class="p-footer">Social media</p>
           <ul class="list svg-images footer-list-elements">
             <li class="link svg-list-element">
-              <a class="svg-elements-list">
+              <a class="svg-list-element">
                 <svg width="24" height="24">
-                  <use
-                    class="svg-elements-list"
-                    href="./images/icons.svg#icon-instagram-2"
-                  ></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
