--- a/portfolio.html
+++ b/portfolio.html
@@ -202,63 +202,53 @@
     <footer class="footer footer-container">
       <div class="container footer-container">
         <div>
-          <a class="link logo logo-blue" href="./portfolio.html"
-            >Web <span class="logo-header-footer logo-footer">Studio</span></a
+          <a class="link logo logo-blue logo-footer" href="./portfolio.html"
+            >Web <span class="logo-header-footer">Studio</span></a
           >
           <p class="p-footer">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
-        <ul class="list svg-images">
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-instagram-2"></use>
-            </svg>
-          </li>
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-twitter-1"></use>
-            </svg>
-          </li>
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-facebook-1"></use>
-            </svg>
-          </li>
-          <li class="link svg-list-element">
-            <svg>
-              <use href="./images/icons.svg#icon-linkedin-1"></use>
-            </svg>
-          </li>
-        </ul>
         <div>
           <p class="p-footer">Social media</p>
-          <ul class="list svg-images">
+          <ul class="list svg-images footer-list-elements">
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use
+                    class="svg-elements-list"
+                    href="./images/icons.svg#icon-instagram-2"
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-list-element">
-              <svg width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
+              <a class="svg-list-element">
+                <svg width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
+
         <img
-          class="portfolio-image"
+          class="section-three-image"
           src="./images/darkbg.jpg"
           alt="darkbg"
           width="1440"
