--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
       </section>
     </main>
     <footer class="footer footer-container">
-      <div class="container footer-container">
+      <div class="container footer-container div-one-footer">
         <div>
           <a class="link logo logo-blue logo-footer" href="./portfolio.html"
             >Web <span class="logo-header-footer">Studio</span></a
@@ -211,34 +211,31 @@
           </p>
         </div>
         <div>
-          <p class="p-footer">Social media</p>
+          <p class="p-footer-two">Social media</p>
           <ul class="list svg-images footer-list-elements">
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
-                  <use
-                    class="svg-elements-list"
-                    href="./images/icons.svg#icon-instagram-2"
-                  ></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
