--- a/index.html
+++ b/index.html
@@ -371,32 +371,32 @@
               </a>
             </li>
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five"></a>
-              <svg width="104" height="56">
-                <use href="./images/icons.svg#icon-Logo-7"></use>
-              </svg>
-            </a>
+              <a class="svg-elements-section-five">
+                <svg width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo-7"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-              <svg width="104" height="56">
-                <use href="./images/icons.svg#icon-Client-5"></use>
-              </svg>
-            </a>
+                <svg width="104" height="56">
+                  <use href="./images/icons.svg#icon-Client-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-              <svg width="104" height="56">
-                <use href="./images/icons.svg#icon-Client-6"></use>
-              </svg>
-            </a>
+                <svg width="104" height="56">
+                  <use href="./images/icons.svg#icon-Client-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer footer-container">
-      <div class="container footer-container">
+      <div class="container footer-container div-one-footer">
         <div>
           <a class="link logo logo-blue logo-footer" href="./index.html"
             >Web <span class="logo-header-footer">Studio</span></a
@@ -407,31 +407,31 @@
           </p>
         </div>
         <div>
-          <p class="p-footer">Social media</p>
+          <p class="p-footer-two">Social media</p>
           <ul class="list svg-images footer-list-elements">
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="link svg-list-element">
-              <a class="svg-list-element">
+            <li class="link footer-icon">
+              <a class="footer-icon">
                 <svg width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
