--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard2.jpg"
@@ -96,7 +96,7 @@
               </a>
             </li>
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard3.jpg"
@@ -111,7 +111,7 @@
             </li>
             <!-- Row 2 -->
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard11.jpg"
@@ -125,7 +125,7 @@
               </a>
             </li>
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard22.jpg"
@@ -139,7 +139,7 @@
               </a>
             </li>
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard33.jpg"
@@ -154,7 +154,7 @@
             </li>
             <!-- Row 3 -->
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard111.jpg"
@@ -168,7 +168,7 @@
               </a>
             </li>
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard222.jpg"
@@ -182,7 +182,7 @@
               </a>
             </li>
             <li class="item-grid">
-              <a href="" class="link">
+              <a href="" class="link portfolio-image">
                 <img
                   class="portfolio-image"
                   src="./images/projectcard333.jpg"
