--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       <!-- section 2 -->
 
       <section class="section-two">
-        <div class="container div-section-two">
+        <div class="container">
           <h2 class="visually-hidden">Futures</h2>
           <ul class="list section-two">
             <li class="link">
-              <div class="svg-elements-section-two">
+              <div class="svg-elements-section-two div-section-two">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
@@ -87,7 +87,7 @@
               </p>
             </li>
             <li class="link">
-              <div class="svg-elements-section-two">
+              <div class="svg-elements-section-two div-section-two">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
@@ -101,7 +101,7 @@
               </p>
             </li>
             <li class="link">
-              <div class="svg-elements-section-two">
+              <div class="svg-elements-section-two div-section-two">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
@@ -115,7 +115,7 @@
               </p>
             </li>
             <li class="link">
-              <div class="svg-elements-section-two">
+              <div class="svg-elements-section-two div-section-two">
                 <svg width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
@@ -396,8 +396,8 @@
       </section>
     </main>
     <footer class="footer footer-container">
-      <div class="container footer-container div-one-footer">
-        <div>
+      <div class="container footer-container">
+        <div class="div-one-footer">
           <a class="link logo logo-blue logo-footer" href="./index.html"
             >Web <span class="logo-header-footer">Studio</span></a
           >
