--- a/portfolio.html
+++ b/portfolio.html
@@ -200,8 +200,8 @@
       </section>
     </main>
     <footer class="footer footer-container">
-      <div class="container footer-container div-one-footer">
-        <div>
+      <div class="container footer-container">
+        <div class="div-one-footer">
           <a class="link logo logo-blue logo-footer" href="./portfolio.html"
             >Web <span class="logo-header-footer">Studio</span></a
           >
