--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg class="svg-icons-element" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -348,7 +348,7 @@
           <ul class="list svg-images">
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-                <svg width="104" height="56">
+                <svg class="svg-icons-element" width="104" height="56">
                   <use
                     href="./images/icons.svg#icon-Logo-4"
                     class="svg-elements-section-five"
@@ -411,28 +411,28 @@
           <ul class="list svg-images footer-list-elements">
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg width="24" height="24">
+                <svg class="svg-icons-element" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg width="24" height="24">
+                <svg class="svg-icons-element" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg width="24" height="24">
+                <svg class="svg-icons-element" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg width="24" height="24">
+                <svg class="svg-icons-element" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
