--- a/index.html
+++ b/index.html
@@ -183,28 +183,44 @@
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg class="svg-icons-element" width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -225,28 +241,44 @@
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -267,28 +299,44 @@
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -309,28 +357,44 @@
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="link svg-list-element">
                     <a class="svg-list-element">
-                      <svg width="16" height="16">
+                      <svg
+                        class="svg-icons-element-light"
+                        width="16"
+                        height="16"
+                      >
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -358,35 +422,35 @@
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-                <svg width="104" height="56">
+                <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-                <svg width="104" height="56">
+                <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-                <svg width="104" height="56">
+                <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-7"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-                <svg width="104" height="56">
+                <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
               <a class="svg-elements-section-five">
-                <svg width="104" height="56">
+                <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client-6"></use>
                 </svg>
               </a>
@@ -411,28 +475,28 @@
           <ul class="list svg-images footer-list-elements">
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg class="svg-icons-element" width="24" height="24">
+                <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg class="svg-icons-element" width="24" height="24">
+                <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg class="svg-icons-element" width="24" height="24">
+                <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
               <a class="footer-icon">
-                <svg class="svg-icons-element" width="24" height="24">
+                <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
