--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <p class="background-white p-body">Product Designer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -193,7 +193,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -204,7 +204,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -215,7 +215,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -240,7 +240,7 @@
                 <p class="background-white p-body">Frontend Developer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -251,7 +251,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -262,7 +262,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -273,7 +273,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -298,7 +298,7 @@
                 <p class="background-white p-body">Marketing</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -309,7 +309,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -320,7 +320,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -331,7 +331,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -356,7 +356,7 @@
                 <p class="background-white p-body">UI Designer</p>
                 <ul class="list svg-images">
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -367,7 +367,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -378,7 +378,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -389,7 +389,7 @@
                     </a>
                   </li>
                   <li class="link svg-list-element">
-                    <a class="svg-list-element">
+                    <a href="" class="svg-list-element">
                       <svg
                         class="svg-icons-element-light"
                         width="16"
@@ -411,7 +411,7 @@
           <h2 class="subtitle-web-studio-blue">Customers</h2>
           <ul class="list svg-images">
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five">
+              <a href="" class="svg-elements-section-five">
                 <svg class="svg-icons-element" width="104" height="56">
                   <use
                     href="./images/icons.svg#icon-Logo-4"
@@ -421,35 +421,35 @@
               </a>
             </li>
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five">
+              <a href="" class="svg-elements-section-five">
                 <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five">
+              <a href="" class="svg-elements-section-five">
                 <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five">
+              <a href="" class="svg-elements-section-five">
                 <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Logo-7"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five">
+              <a href="" class="svg-elements-section-five">
                 <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="link svg-elements-big">
-              <a class="svg-elements-section-five">
+              <a href="" class="svg-elements-section-five">
                 <svg class="svg-icons-element" width="104" height="56">
                   <use href="./images/icons.svg#icon-Client-6"></use>
                 </svg>
@@ -474,28 +474,28 @@
           <p class="p-footer-two">Social media</p>
           <ul class="list svg-images footer-list-elements">
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
