--- a/portfolio.html
+++ b/portfolio.html
@@ -221,7 +221,7 @@
               </a>
             </li>
             <li class="link footer-icon">
-              <a class="footer-icon">
+              <a href="" class="footer-icon">
                 <svg class="svg-icons-element-light" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
